# RTSpatialJoin

./: CMakeLists.txt  README.md
baseline/: CGALQueryEngine.cpp  CGALQueryEngine.h  CMakeLists.txt  CMakeLists_backup.txt  cpu_cgal.cpp  cpu_cgal2.cpp  cpu_cgal2.h  mymesh.cpp  mymesh.h
baseline/geometry/: mymesh.cpp
check/: check_async  check_cudaMallocAsync.cpp
example01/: main.cpp  optix8.h
spatialJoin/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  LaunchParams2.h  SpatialJoinRenderer.cpp  SpatialJoinRenderer.h  SpatialJoinRenderer2.cpp  SpatialJoinRenderer2.h  devicePrograms.cu  devicePrograms2.cu  main.cpp  main2.cpp
